maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: forward reference extends over definition of variable sommeAngle
  do { var sommeAngle:Int = keepHandOnSideWall(sommeAngle)
                                               ^